# qmachina

./: Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: publish-crate.yml  rust-clippy.yml  rust-doc.yml  rust-docs.yml
src/: lib.rs  main.rs
src/activation/: elu.rs  leaky_relu.rs  mod.rs  param_relu.rs  relu.rs  sigmoid.rs  softmax.rs  step.rs  swish.rs  tanh.rs
src/loss/: bce.rs  cce.rs  huber.rs  mae.rs  mod.rs  mse.rs
src/technical_analysis/: bollinger.rs  ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs
