[package]
name = "qmachina"
version = "0.1.0"
edition = "2021"
description = "A small library for Quant Machine Learning development."
license = "LGPL-3.0-only"
authors = ["Lucas Morais <lucas@dashbunker.com>"]
documentation = "https://docs.rs/qmachina/latest/qmachina/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
