[package]
name = "qmachina"
version = "0.3.0-dev.2"
edition = "2021"
description = "A small library for Quant Machine Learning development."
license = "LGPL-3.0-only"
authors = ["Lucas Morais <lucas@dashbunker.com>"]
documentation = "https://docs.rs/qmachina/latest/qmachina/"
readme = "README.md"
repository = "https://github.com/lmorais-dev/qmachina"
categories = ["algorithms", "data-structures", "finance", "mathematics", "science"]
keywords = ["machine-learning", "quantitative", "quant"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
polars = ["dep:polars"]

[dependencies]
anyhow = "=1.0.79"
polars = { version = "=0.36.2", optional = true }

